[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/HealthBar/underProgressBar.png" type="Texture" id=1]
[ext_resource path="res://assets/HealthBar/overBar.png" type="Texture" id=2]
[ext_resource path="res://scripts/healthBar.gd" type="Script" id=3]

[node name="HealthBar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
healthy_color = Color( 0.27451, 0.517647, 0.988235, 1 )
caution_color = Color( 0.768627, 0.560784, 0.0666667, 1 )
pulse_color = Color( 0.54902, 0, 0, 1 )
danger_zone = 0.3
will_paulse = true

[node name="DamageBar" type="TextureProgress" parent="."]
anchor_right = 1.0
margin_left = 15.0
margin_top = 15.0
margin_bottom = 137.0
rect_scale = Vector2( 0.3, 0.3 )
value = 60.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 1 )
tint_under = Color( 0.152941, 0.129412, 0.129412, 1 )
tint_progress = Color( 0.976471, 0.192157, 0.14902, 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Bar" type="TextureProgress" parent="."]
anchor_right = 1.0
margin_left = 15.0
margin_top = 15.0
rect_scale = Vector2( 0.3, 0.3 )
value = 1.0
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 1 )
tint_over = Color( 0.952941, 0.313726, 0.278431, 1 )
tint_progress = Color( 0.27451, 0.670588, 0.988235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateTween" type="Tween" parent="."]

[node name="PulseTween" type="Tween" parent="."]
